@@ -22,6 +22,8 @@ NEW FEATURES
 
 FIXES
 
+ * Error on save Postgis features with more then one Gis layer active
+
  * Gis: Fault on Geo Server Layers
 
  * AdditionalActivityLabel metadata not correctly managed if relative attribute is not displayed in grid
